--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "next-dev-server": "next dev",
+    "watch-tailwind-css": "npx tailwindcss -i ./src/styles/input.css -o ./src/styles/index.css --watch",
+    "dev": "run-p next-dev-server watch-tailwind-css",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -18,5 +20,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.8.7",
+    "prettier-plugin-tailwindcss": "^0.2.7",
+    "tailwindcss": "^3.3.1"
   }
 }
